API separated via tags in swagger
