# app/Http/Requests/UpdatePasswordRequest.php
@@ -4,8 +4,31 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
+/**
+ * @OA\Schema (
+ *     title="Update user password request",
+ *     description="Update user password request body data",
+ * )
+ */
 class UpdatePasswordRequest extends FormRequest
 {
+    /**
+     * @OA\Property (
+     *     title="password"
+     * )
+     * @var string
+     */
+    public $password;
+
+    /**
+     * @OA\Property (
+     *     title="password_confirm"
+     * )
+     * @var string
+     */
+    public $password_confirm;
+
+
     /**
      * Determine if the user is authorized to make this request.
      */
